--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^11.0.6",
     "@nestjs/platform-express": "^9.0.0",
+    "@prisma/client": "^4.16.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "graphql": "^16.6.0",
